<resources>
    <string name="app_name">UnithonAndroid</string>
    <string name="title_home">홈</string>
    <string name="title_chatting">채팅</string>
    <string name="title_notification">알림</string>
    <string name="title_to_do_list">할 일</string>
    <string name="title_album">앨범</string>
    <string name="title_activity_detail_to_do">DetailToDoActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
