<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.androidtown.unithonandroid.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_home"
            android:background="?android:attr/selectableItemBackground"
            />

        <Button
            android:id="@+id/btn_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_to_do_list"
            android:background="?android:attr/selectableItemBackground"
            />

        <Button
            android:id="@+id/btn_chatting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_chatting"
            android:background="?android:attr/selectableItemBackground"
            />

        <Button
            android:id="@+id/btn_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_album"
            android:background="?android:attr/selectableItemBackground"
            />

        <Button
            android:id="@+id/btn_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_notification"
            android:background="?android:attr/selectableItemBackground"
            />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
